--- a/starter/Vagrantfile
+++ b/starter/Vagrantfile
@@ -21,18 +21,12 @@ Vagrant.configure("2") do |config|
       # configure the parameters for VirtualBox provider
       node.vm.provider "virtualbox" do |v|
         v.name = "node#{i}"
-        v.memory = 2048
-        v.cpus = 2
+        v.memory = "4096"
+        v.cpus = 4
+        v.customize ["modifyvm", :id, "--ioapic", "on"]
       end
 
-    config.vm.provision "shell", inline: <<-SHELL
-      sudo zypper --non-interactive install apparmor-parser
-      # install Docker
-      zypper --non-interactive install docker #python3-docker-compose
-      systemctl enable docker
-      usermod -G docker -a $USER
-      systemctl restart docker
-    SHELL
+      config.vm.provision "shell", path: "init.sh"
     end
   end
 end
